[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/WindowTitle/WindowTitle.gd" type="Script" id=2]
[ext_resource path="res://shared/fonts/OpenSans_SemiboldHeadline.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/sword-wound.svg-adc02d31f58dd42f6bc022a14d5cff35.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/close-24px.svg-2f7eb4bdf31932325445cac97d3d2d4f.stex"

[node name="WindowTitle" type="MarginContainer"]
margin_right = 1280.0
margin_bottom = 44.0
custom_constants/margin_bottom = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBackground" type="PanelContainer" parent="."]
margin_right = 1280.0
margin_bottom = 36.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TitleBackground"]
margin_right = 1280.0
margin_bottom = 36.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="TitleRow" type="HBoxContainer" parent="TitleBackground/MarginContainer"]
margin_right = 1280.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconMargin" type="MarginContainer" parent="TitleBackground/MarginContainer/TitleRow"]
margin_right = 44.0
margin_bottom = 36.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 3
custom_constants/margin_left = 10
custom_constants/margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="TitleBackground/MarginContainer/TitleRow/IconMargin"]
margin_left = 10.0
margin_top = 3.0
margin_right = 40.0
margin_bottom = 33.0
rect_min_size = Vector2( 30, 30 )
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="Title" type="Label" parent="TitleBackground/MarginContainer/TitleRow"]
margin_left = 48.0
margin_right = 1231.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
text = "Title"
valign = 1

[node name="CloseMargin" type="MarginContainer" parent="TitleBackground/MarginContainer/TitleRow"]
margin_left = 1235.0
margin_right = 1280.0
margin_bottom = 36.0
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="TitleBackground/MarginContainer/TitleRow/CloseMargin"]
margin_left = 5.0
margin_right = 45.0
margin_bottom = 36.0
rect_min_size = Vector2( 40, 20 )
texture_normal = SubResource( 3 )
expand = true
stretch_mode = 3
[connection signal="gui_input" from="TitleBackground" to="." method="_on_TitleBackground_gui_input"]
[connection signal="pressed" from="TitleBackground/MarginContainer/TitleRow/CloseMargin/Close" to="." method="_on_Close_pressed"]
